app/styles/app.css
/* ... */
.howjustmeatSlider .slick-slider .slick-track,
.slick-slider .slick-list {
  text-align: center !important;
}
.howjustmeatSlider .slick-dots {
  bottom: -30px !important;
}
.featuredSlider .slick-slide > div {
  margin: 0 10px;
}
.featuredSlider .slick-list {
  margin: 0 -10px;
}
.featuredSlider .slick-dots li button {
  background-color: #151515 !important;
  border: 4px solid #222222 !important;
  border-radius: 50% !important;
}
.featuredSlider .slick-dots {
  bottom: 0px !important;
}
.featuredSlider .slick-dots li.slick-active button:before {
  color: #7a392d !important;
}
.homeFeaturedSlider .slick-slide > div {
  margin: 0 10px;
}
.homeFeaturedSlider .slick-list {
  margin: 0 -10px;
}
.homeFeaturedSlider .slick-dots li {
  width: 10px;
  height: 10px;
}
.homeFeaturedSlider .slick-dots li button {
  width: 10px;
  height: 10px;
  font-size: 0;
  background-color: #151515 !important;
  border: 0px solid #222222 !important;
  border-radius: 50% !important;
  padding: 0 !important;
  margin-top: 4px !important;
}
.homeFeaturedSlider .slick-dots li button:before {
  width: 10px;
  height: 10px;
  padding: 0 !important;
}
.homeFeaturedSlider .slick-dots {
  bottom: 0px !important;
}
.homeFeaturedSlider .slick-dots li.slick-active button:before {
  width: 10px;
  height: 10px;
  color: #7a392d !important;
  padding: 0 !important;
}
.productsSlider .slick-track {
  display: flex !important;
  gap: 22px !important;
}
.productsSlider .slick-prev:before,
.slick-next:before {
  font-size: 41px !important;
  color: #908f8e !important;
  background: white;
  border-radius: 50%;
  display: flex;
  align-items: center;
  justify-content: center;
  width: 29px;
  height: 29px;
}
.slick-dots li button {
  background-color: transparent !important;
  border: 2px solid #fff !important;
  border-radius: 50% !important;
}
.slick-dots li.slick-active button:before {
  color: #fff !important;
  font-size: 10px !important;
}
.slick-slider .slick-track,
.slick-slider .slick-list {
  text-align: center !important;
}
.slick-dots {
  bottom: -39px !important;
}

section.product-list-slider button.slick-arrow.slick-prev {
  @apply sm:left-[10px] left-[15px] z-10;
}

section.product-list-slider button.slick-arrow.slick-next {
  @apply sm:right-[25px] z-10 right-[35px];
}

.select-hover:hover select {
  @apply bg-[url(https://cdn.shopify.com/s/files/1/0672/4776/7778/files/icon-select.svg?v=1713469358)];
}

.bg-white.select-hover select {
  @apply bg-[url(https://cdn.shopify.com/s/files/1/0672/4776/7778/files/icon-select.svg?v=1713469358)];
}

.slider-container.productsSlider ul.slick-dots button {
  @apply w-4 h-4;
}

.slider-container.productsSlider ul.slick-dots li.slick-active button:before {
  @apply w-2 h-2 top-[-1.5px] left-[3.25px];
}

.productsSlider button.slick-arrow.slick-prev:before,
.productsSlider button.slick-arrow.slick-next:before {
  @apply opacity-100;
  background: rgba(0, 0, 0, 0.4) !important;
  font-family: monospace;
  color: white !important;
  font-size: 18px !important;
}
.productsSlider button.slick-arrow.slick-prev:before {
  @apply content-["<"];
}
.productsSlider button.slick-arrow.slick-next:before {
  @apply content-[">"];
}

.productsSlider button.slick-arrow.slick-prev:before,
.productsSlider button.slick-arrow.slick-next:before {
  @apply w-10 h-10;
}

.order-now-carousel > div {
  @apply max-w-[70%] m-auto;
}
.order-now-carousel {
  @apply gap-5;
}

.order-now-carousel > div:last-child {
  @apply max-w-full m-auto;
}
.order-now-carousel > div:last-child span {
  @apply w-4 h-4 relative border-2 border-solid border-[white];
  background: transparent;
}
.order-now-carousel > div:last-child span.bg-white:before {
  @apply content-[""] absolute -translate-x-2/4 -translate-y-2/4 w-2 h-2 left-2/4 top-2/4;
  background: white;
}

@media screen and (max-width: 1190px) {
  .custom-padding-header li {
    @apply px-2;
  }
}

.how-it-works-slider .swiper-pagination {
  @apply sm:hidden block;
}

.order-images-slider span.swiper-pagination-bullet {
  @apply w-4 h-4 bg-transparent opacity-100 relative border-2 border-solid border-[white];
  background: transparent !important;
}
.order-images-slider
  span.swiper-pagination-bullet.swiper-pagination-bullet-active:before {
  @apply absolute h-2 w-2 content-[var(--tw-content)] rounded-[50%] left-2/4 top-2/4;
  --tw-translate-x: -50%;
  --tw-translate-y: -50%;
  transform: translate(var(--tw-translate-x), var(--tw-translate-y))
    rotate(var(--tw-rotate)) skew(var(--tw-skew-x)) skewY(var(--tw-skew-y))
    scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
  --tw-content: '';
  background: white;
}

.sticky-header {
  @apply visible opacity-100 translate-y-0 transition-transform duration-[0.2s] ease-linear shadow-[0_2px_10px_2px_#0000000f] fixed z-[99] border-b-[rgba(29,29,29,0.1)] border-b border-solid left-0 top-0;
  background: #eeeeee !important;
  position: fixed !important;
}

.featured-slider .truncate {
  @apply text-base;
}

@media screen and (max-width: 370px) {
  .font-mobile {
    font-size: 20px !important;
    line-height: 1.75rem !important;
  }
}

.filteration-ul li:first-child button {
  @apply rounded-tl rounded-bl;
}
.filteration-ul li:last-child button {
  @apply rounded-tr rounded-br;
}

.your-gym .slick-dots li button:before,
.your-gym .slick-dots li button {
  width: 10px;
  height: 10px;
  padding: 2px;
  line-height: 12px;
}

.your-gym .slick-dots li.slick-active button {
  color: #7a392d !important;
}

.margin-0-auto {
  margin: 0 auto;
}

.rounded-corner {
  border-radius: 10px;
}

@media screen and (max-width: 540px) {
  .bg-herb-roasted-chicken-breast {
    display: none;
  }
}

.custom-select {
  @apply !bg-none;
}

.custom-select::-ms-expand {
  @apply !hidden;
}

.mobile-cart .plan-picker-freq-div {
  @apply !px-0;
}

.page-custom-bundle ~ #reamazejs-container {
  @apply sm:!visible !invisible;
}

